--- a/Index.html
+++ b/Index.html
@@ -289,7 +289,7 @@
             </td>
             <td>
                 <div class="container">
-                    <img src="Indeximages/Swift.png" alt="Avatar" class="image" />
+                    <img src="Indeximages/swift.png" alt="Avatar" class="image" />
                     <div class="overlay" style="background-color: #FD7734; width: 340px; height: 340px;">
                         <div class="text">Swift</div>
                     </div>
