--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="topnav">
         <a href="index.html" class="fa fa-home" style="font-size: 24px"></a>
         <a href="Python/Python.html">Python</a>
-        <a href="#">C++</a>
+        <a href="C++/C++.html">C++</a>
         <a href="#">C#</a>
         <a href="#">HTML</a>
         <a href="#">Java</a>
@@ -229,10 +229,12 @@
             </td>
             <td class="auto-style9">
                 <div class="container">
-                    <img src="Indeximages/C++.png" alt="Avatar" class="image" />
-                    <div class="overlay" style="background-color: #004482; width: 340px; height: 340px;">
-                        <div class="text">C++</div>
-                    </div>
+                    <a href="C++/C++.html">
+                        <img src="Indeximages/C++.png" alt="Avatar" class="image" />
+                        <div class="overlay" style="background-color: #004482; width: 340px; height: 340px;">
+                            <div class="text">C++</div>
+                        </div>
+                    </a>
                 </div>
             </td>
             <td class="auto-style10">
