--- a/Python/Python.html
+++ b/Python/Python.html
@@ -16,15 +16,15 @@
         <a href="../index.html" class="fa fa-home" style="font-size: 24px"></a>
         <a href="../Python/Python.html">Python</a>
         <a href="../C++/C++.html">C++</a>
-        <a href="#">C#</a>
-        <a href="#">HTML</a>
+        <a href="../Csharp/Csharp.html">C#</a>
+        <a href="../HTML/HTML.html">HTML</a>
         <a href="#">Java</a>
         <a href="#">C</a>
         <a href="#">CSS</a>
         <a href="#">JS</a>
         <a href="#">Swift</a>
     </div>
-    <div>
+    <div class="box">
         <h2>O Pythonu</h2>
 
         <p>
@@ -37,14 +37,14 @@
         </p>
 
     </div>
-    <div>
+    <div class="box">
         <h2>Obilježja Pythona</h2>
         <p>
             Python koristi uvlačenje kao metodu razlikovanja programskih blokova, tj. ne koristi vitičaste zagrade ili ključne riječi kao većina programskih jezika.<br />
             Povećanje uvlačenja znači da dolazi novi, ugniježđeni blok, dok smanjenje označava kraj trenutnog bloka.
         </p>
     </div>
-    <div>
+    <div class="box">
         <h2>Gdje se Python Koristi?</h2>
         <p>
             Python se koristi gotovo svugdje. Zbog njegove jednostavnosti i fleksibilnosti koriste ga i počentici i profesionalci.<br />
@@ -52,7 +52,7 @@
         </p>
 
     </div>
-    <div>
+    <div class="box">
         <h2>Python Frameworks-i i Library-i</h2>
         <p>
             Pošto je python vrlo popularan programski jezik ima i mnogo frameworka.<br />
@@ -84,8 +84,9 @@
             <br />
         </ul>
     </div>
-    <h2>Sintaksa u Pythonu</h2>
-    <div class="prettyprint" >
+    <div class="box">
+        <h2>Sintaksa u Pythonu</h2>
+        <div class="prettyprint">
 <pre class="prettyprint">
             #!/usr/bin/env python
 # -*- coding: iso-8859-1 -*-
@@ -107,6 +108,7 @@ for quant in range(99, 0, -1):
    print "Take one down, pass it around,", suffix
    print "--"
 </pre>
+        </div>
     </div>
 </body>
 </html>
