--- a/index.html
+++ b/index.html
@@ -27,53 +27,56 @@
         <a href="index.html" class="fa fa-home" style="font-size: 24px"></a>
         <a href="Python/Python.html">Python</a>
         <a href="C++/C++.html">C++</a>
-        <a href="#">C#</a>
-        <a href="#">HTML</a>
+        <a href="Csharp/Csharp.html">C#</a>
+        <a href="HTML/HTML.html">HTML</a>
         <a href="#">Java</a>
         <a href="#">C</a>
         <a href="#">CSS</a>
         <a href="#">JS</a>
         <a href="#">Swift</a>
     </div>
-    <table>
-        <tr>
-            <td>
-                <h2>Osnovno o programiranju</h2>
-                <p>
-                    Programiranje je pisanje uputa računalu što i kako učiniti, a izvodi se u nekom od programskih jezika.<br />
-                    Programiranje je umjetnost i umijeće u stvaranju programa za računala.<br />
-                    Stvaranje programa sadrži u sebi pojedine elemente dizajna, umjetnosti, znanosti, matematike kao i inžinjeringa.<br />
-                    Osoba koja stvara program zove se programer.
+    <div class="box">
+        <table>
+            <tr>
+                <td>
+
+                    <h2>Osnovno o programiranju</h2>
+                    <p>
+                        Programiranje je pisanje uputa računalu što i kako učiniti, a izvodi se u nekom od programskih jezika.<br />
+                        Programiranje je umjetnost i umijeće u stvaranju programa za računala.<br />
+                        Stvaranje programa sadrži u sebi pojedine elemente dizajna, umjetnosti, znanosti, matematike kao i inžinjeringa.<br />
+                        Osoba koja stvara program zove se programer.
                     
-                </p>
-            </td>
-            <td>
-                <img src="Slika1.jpg" />
-            </td>
-        </tr>
-    </table>
-    <hr />
-    <br />
-    <table>
-        <tr>
-            <td class="auto-style15">
-                <h2>Interpreter I Kompajler</h2>
-                <p>
-                    Interpreter i kompajler su programi koji prevode napisani kod u stroju prepoznatljivom.<br />
-                    Razlika imzeđu Interpreta i kompajlera jest da Interpreter prevodi kod dok se on izvršava,<br />
-                    a Kompajler prvo prevede cijeli kod te ga onda pokrene.<br />
-                    Obje vrste prevodilaca imaju svoje mane i prednosti.<br />
-                    postoje još vrsta prevodilaca, a neki su: dekompilator, transkompilator, cross-kompilator...
-                </p>
-            </td>
-            <td>
-                <img src="fox2.jpg" class="auto-style14" />
-            </td>
-        </tr>
-    </table>
-    <hr />
+                    </p>
+                </td>
+                <td>
+                    <img src="Slika1.jpg" />
+                </td>
+            </tr>
+        </table>
+    </div>
+    <div class="box">
+        <table>
+            <tr>
+                <td class="auto-style15">
+                    <h2>Interpreter I Kompajler</h2>
+                    <p>
+                        Interpreter i kompajler su programi koji prevode napisani kod u stroju prepoznatljivom.<br />
+                        Razlika imzeđu Interpreta i kompajlera jest da Interpreter prevodi kod dok se on izvršava,<br />
+                        a Kompajler prvo prevede cijeli kod te ga onda pokrene.<br />
+                        Obje vrste prevodilaca imaju svoje mane i prednosti.<br />
+                        postoje još vrsta prevodilaca, a neki su: dekompilator, transkompilator, cross-kompilator...
+                    </p>
+                </td>
+                <td>
+                    <img src="fox2.jpg" class="auto-style14" />
+                </td>
+            </tr>
+        </table>
+    </div>
+    
     <!-- Razine Programskih jezika -->
-    <div>
+    <div class="box">
         <h2>Razine Programskih jezika</h2>
         <h3>Strojni jezik</h3>
         <p>
@@ -84,7 +87,6 @@
             Premda je korištenje strojnog jezika uvijek ograničeno na samo jedan određeni tip mikroprocesora i vrlo složeno, daje velike prednosti,<br />
             kao što su mogućnost boljeg iskorištavanja memorije računala, mogućnost izravnog dijelovanja na sklopovlje računala i veća brzina izvođenja samog programa.<br />
         </p>
-        <hr />
         <h3>Asemblerski jezik</h3>
         <p>
             ili jednostavno asembler je niži simbolički jezik orijentiran računalu (tj. prilagođen radu računala).<br />
@@ -94,7 +96,6 @@
             Ovisno o broju instrukcija strojnog jezika razlikujemo CISC i RISC procesore: CISC procesori imaju velik broj instrukcija, od kojih su mnoge složene pa se relativno sporo izvode,<br />
             dok RISC procesori imaju implementiran malen broj osnovnih operacija, koje se izvode relativno brzo.
         </p>
-        <hr />
         <h3>Jezici niske razine</h3>
         <p>
             programski jezik niske razine ili niži programski jezik je jezik koji pruža malo ili nimalo apstrakcija računalovog mikroprocesora.<br />
@@ -102,15 +103,14 @@
             Zbog te su činjenice jezici niske razine često opisani kao "bliski sklopovlju".<br />
             Nazivi "visoke razine" i "niske razine" su također korišteni relativno - Java programer može smatrati C jezikom niske razine.
         </p>
-        <hr />
         <h3>Jezici Visoke Razine</h3>
         <p>
             Programski jezik visoke razine ili viši programski jezik je programski jezik koji, u usporedbi sa programskim jezicima niske razine, može biti apstraktniji, lakši za uporabu, ili prenosiviji po platformama.<br />
             Takvi jezici često apstrahiraju CPU operacije poput modela pristupa memoriji i upravljanje djelokrugom.<br />
 
         </p>
-        <hr />
     </div>
+    <div class="box">
     <h2>Tipovi Programskih jezika.</h2>
     <p>Postoje <b>jako</b> puno tipova programskih jezika </p>
     <br />
@@ -119,8 +119,8 @@
         <li>Objektno orijentirano</li>
         <li>Proceduralno</li>
         <li>funkcijsko</li>
-        <li>
-            <button id="myBtn">Klikni za više!</button></li>
+
+        <button id="myBtn" class="button">Klikni za više!</button></li>
     </ul>
     <div id="myModal" class="modal">
 
@@ -199,9 +199,9 @@
         </div>
 
     </div>
-    <hr />
-    <br />
-    <br />
+    </div>
+
+    <div class="box">
     <p>Postoji mnogo programskih jezika. Velika količina tih programskih jezika se ni ne koristi.</p>
     <input id="toggle" type="checkbox">
     <label for="toggle">Za one koji žele više</label>
@@ -239,20 +239,24 @@
             </td>
             <td class="auto-style10">
                 <div class="container">
-                    <img src="Indeximages/Csharp.png" alt="Avatar" class="image" />
-                    <div class="overlay" style="background-color: #7B3399; width: 340px; height: 340px;">
-                        <div class="text">C#</div>
-                    </div>
+                    <a href="Csharp/Csharp.html">
+                        <img src="Indeximages/Csharp.png" alt="Avatar" class="image" />
+                        <div class="overlay" style="background-color: #7B3399; width: 340px; height: 340px;">
+                            <div class="text">C#</div>
+                        </div>
+                    </a>
                 </div>
             </td>
         </tr>
         <tr>
             <td class="auto-style3">
                 <div class="container">
-                    <img src="Indeximages/Html.png" alt="Avatar" class="image" />
-                    <div class="overlay" style="background-color: #EC662B; width: 340px; height: 340px;">
-                        <div class="text">HTML</div>
-                    </div>
+                    <a href="HTML/HTML.html">
+                        <img src="Indeximages/Html.png" alt="Avatar" class="image" />
+                        <div class="overlay" style="background-color: #EC662B; width: 340px; height: 340px;">
+                            <div class="text">HTML</div>
+                        </div>
+                    </a>
                 </div>
             </td>
             <td class="auto-style5">
@@ -299,6 +303,7 @@
             </td>
         </tr>
     </table>
+        </div>  
     <script>
         // Get the modal
         var modal = document.getElementById('myModal');
