--- a/HTML/HTML.html
+++ b/HTML/HTML.html
@@ -18,7 +18,7 @@
         <a href="../C++/C++.html">C++</a>
         <a href="../Csharp/Csharp.html">C#</a>
         <a href="../HTML/HTML.html">HTML</a>
-        <a href="#">Java</a>
+        <a href="../Java/Java.html">Java</a>
         <a href="#">C</a>
         <a href="#">CSS</a>
         <a href="#">JS</a>
