--- a/Csharp/Csharp.html
+++ b/Csharp/Csharp.html
@@ -19,8 +19,8 @@
         <a href="../Csharp/Csharp.html">C#</a>
         <a href="../HTML/HTML.html">HTML</a>
         <a href="../Java/Java.html">Java</a>
-        <a href="#">C</a>
-        <a href="#">CSS</a>
+        <a href="../C/C.html">C</a>
+        <a href="../CSS/CSS.html">CSS</a>
         <a href="#">JS</a>
         <a href="#">Swift</a>
     </div>
