--- a/Java/Java.html
+++ b/Java/Java.html
@@ -20,7 +20,7 @@
         <a href="../HTML/HTML.html">HTML</a>
         <a href="../Java/Java.html">Java</a>
         <a href="../C/C.html">C</a>
-        <a href="#">CSS</a>
+        <a href="../CSS/CSS.html">CSS</a>
         <a href="#">JS</a>
         <a href="#">Swift</a>
     </div>
