--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <a href="HTML/HTML.html">HTML</a>
         <a href="Java/Java.html">Java</a>
         <a href="C/C.html">C</a>
-        <a href="#">CSS</a>
+        <a href="CSS/CSS.html">CSS</a>
         <a href="#">JS</a>
         <a href="#">Swift</a>
     </div>
